# ishi

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  ishi.sublime-project  nflux.sublime-keymap  nflux.sublime-project
cmake/Modules/: FindClang.cmake  FindDirectX.cmake  FindDirectX11.cmake
demos/: CMakeLists.txt  FileDemo.cpp
docs/: CMakeLists.txt  Doxyfile.in
ext/catch/: CMakeLists.txt
include/core/: array.h  common.h  math.h  matrix.h  point.h  tensor.h  value_list.h  vector.h
include/core/algebra/: vec_trait.h
include/core/algebra/impl/: array_vec.h
include/core/functional/: map.h  zip.h
include/memory/: chunk.h  fixed_allocator.h
lib/GLEW/: .gitignore  CMakeLists.txt
lib/SFML/src/SFML/Window/Linux/: GlxContext.cpp
lib/blitz/: CMakeLists.txt
lib/libtga/: CMakeLists.txt
lib/libtga/src/: CMakeLists.txt
lib/main/blitz/: CMakeLists.txt
lib/main/blitz/include/blitz/: mathfunc.h
lib/main/blitz/test/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: Arithmetics.h  Array.h  ArrayImpl.cpp  Common.h  Exceptions.h  Math.h  Matrix.cpp  Matrix.h  MatrixImpl.cpp  Point.cpp  Point.h  PointImpl.cpp  Tensor.h  TypeList.h  Vector.h  VectorImpl.cpp
src/main/cpp/memory/: chunk.cpp
src/main/include/core/: common.h  list_initializer.h  point.h  vector.h
src/main/include/core/algebra/: vec.h
src/main/include/core/algebra/impl/: array_vec.h  blitz_vec.h
src/memory/: Chunk.cpp  Chunk.h  FixedAllocator.cpp  FixedAllocator.h  chunk.cpp  fixed_allocator.cpp
src/test/cpp/: main.cpp
src/test/cpp/core/: test_math.cpp  test_point.cpp
src/test/cpp/core/algebra/impl/: test_array_vec.cpp  test_blitz_vec.cpp
src/test/include/: test_common.h  test_math.h  test_point.h
src/utilities/: File.cpp  File.h
test/: CMakeLists.txt  FileDemo.cpp  TestAll.cpp  TestArithmetics.h  TestArray.h  TestMath.h  TestMatrix.h  TestPoint.h  main.cpp
test/core/: test_math.cpp
test/core/algebra/impl/: test_array_vec.cpp
test/include/: test_array.h  test_common.h  test_matrix.h  test_point.h  test_zip.h
test/src/: main.cpp
