#---------------------------------------------------------------------------#
# List include directories                                                  #
#---------------------------------------------------------------------------#
include_directories(
	${INC_ROOT}
	${CORE_INCLUDE}
	${LIB_SFML_INCLUDE}
)

#---------------------------------------------------------------------------#
# List source files                                                         #
#---------------------------------------------------------------------------#
set(SRC_CORE
	${SRC_ROOT}/core/Point.h
	${SRC_ROOT}/core/Matrix.h
	${SRC_ROOT}/core/Vector.h
)

set(SRC_MAIN
	${SRC_ROOT}/main.cpp
	${SRC_CORE}
)

#---------------------------------------------------------------------------#
# List build targets                                                        #
#---------------------------------------------------------------------------#
add_executable(nFlux ${SRC_MAIN})

#---------------------------------------------------------------------------#
# Link with libraries                                                       #
#---------------------------------------------------------------------------#
target_link_libraries(nFlux
	sfml-window
	tga
)
